# ibroadcast-dl

./: CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ibroadcastdl/: __init__.py  __main__.py  cli.py  dl.py  exceptions.py
tests/: conftest.py  test_cli.py  test_dl.py
